# deep_lean

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  README.md  project.md  pyproject.toml
docs/: architecture.md
lean_project/: DeepLean.lean  lake-manifest.json  lakefile.toml
src/: __init__.py  __main__.py  config.py  llm.py  models.py
src/agents/: base.py  decomposer.py  formalizer.py  graph.py  notebook_agent.py  orchestrator.py  reporter.py  researcher.py  single_loop.py  verifier.py
src/prompts/: formalizer.md  notebook_agent.md  orchestrator.md  reporter.md  researcher.md  verifier.md
src/tools/: arxiv_search.py  example_bank.py  lean_executor.py  mathlib_index.py  notebook_builder.py  notebook_executor.py  pdf_reader.py  plot_generator.py  semantic_scholar.py  symbolic_math.py
src/utils/: lean_parser.py  logging.py  provenance.py
tests/: conftest.py  test_config.py  test_llm.py  test_models.py
tests/test_agents/: test_formalizer.py  test_graph.py  test_verifier.py
tests/test_integration/: test_benchmark.py  test_e2e.py
tests/test_tools/: test_arxiv_search.py  test_lean_executor.py  test_mathlib_index.py  test_notebook_builder.py
tests/test_utils/: test_lean_parser.py
