[project]
name = "deep-lean"
version = "0.1.0"
description = "Agentic deep researcher for mathematics and physics with Lean 4 formal verification"
requires-python = ">=3.12"
dependencies = [
    # --- Core ---
    "litellm>=1.55",
    "langgraph>=0.4",
    "langchain-core>=0.3",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",
    # --- Search & Retrieval ---
    "arxiv>=2.1",
    "chromadb>=0.6",
    "openai>=1.60",
    "httpx>=0.27",
    # --- Symbolic & Numerical ---
    "sympy>=1.13",
    "numpy>=2.1",
    "scipy>=1.14",
    # --- Notebook ---
    "nbformat>=5.10",
    "nbconvert>=7.16",
    "jupyter-client>=8.6",
    "ipykernel>=6.29",
    # --- Visualization ---
    "matplotlib>=3.9",
    "plotly>=5.24",
    # --- PDF ---
    "PyMuPDF>=1.25",
    # --- Logging ---
    "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that require live APIs or Lean (deselect with '-m not integration')",
]
